# gboard-wrapper

./: .gitignore  Cargo.toml  Makefile  README.md
debian/: changelog  control  copyright  ibus-gboard.install  rules
ibus/: Cargo.toml  build.rs
ibus/data/: gboard.xml
ibus/src/: main.rs
ibus/src/dbus/: mod.rs
wrapper/: Cargo.toml
